# ChangeLog for app-arch/libarchive
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.49 2009/04/16 22:58:27 flameeyes Exp $

*libarchive-2.7.0 (16 Apr 2009)

  16 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/libarchive-2.7.0-fortified-sources.patch, +libarchive-2.7.0.ebuild:
  Version bump.

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  libarchive-2.6.1.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> libarchive-2.6.1.ebuild:
  alpha/ia64 stable wrt #260063

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  libarchive-2.6.1.ebuild:
  stable x86, 260484

  06 Mar 2009; Brent Baude <ranger@gentoo.org> libarchive-2.6.0.ebuild:
  Marking libarchive-2.6.0 ppc for bug 257165

  05 Mar 2009; Brent Baude <ranger@gentoo.org> libarchive-2.6.0.ebuild:
  Marking libarchive-2.6.0 ppc64 for bug 257165

*libarchive-2.6.2 (27 Feb 2009)

  27 Feb 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -libarchive-2.5.5.ebuild, +libarchive-2.6.2.ebuild:
  Version bump, remove old version.

  01 Feb 2009; Markus Meier <maekke@gentoo.org> libarchive-2.6.0.ebuild:
  amd64/x86 stable, bug #257165

  26 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  +files/libarchive-2.6.1-headers.patch, libarchive-2.6.1.ebuild:
  Fix missing prototypes for *times functions.

  20 Jan 2009; Raúl Porcel <armin76@gentoo.org> libarchive-2.6.1.ebuild:
  Add ~arm/~sh

*libarchive-2.6.1 (19 Jan 2009)

  19 Jan 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +libarchive-2.6.1.ebuild:
  Version bump.

  02 Jan 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/libarchive-2.6.0-nolibs.patch, libarchive-2.6.0.ebuild:
  Fix building with bzip2 and zlib disabled, closes bug #253284. Thanks to
  Lifong Sun for the patch.

*libarchive-2.6.0 (29 Dec 2008)

  29 Dec 2008; Diego E. Pettenò <flameeyes@gentoo.org>