@@ -8,7 +8,7 @@ DIST libarchive-2.6.2.tar.gz 948569 RMD160 a32ea45632b2704b13cf04ec5ffba44258c85
 DIST libarchive-2.7.0.tar.gz 1243793 RMD160 997f2809cb91eb84707714cb58f4840dee0a9ea0 SHA1 625347766797929873a8e31819a14c405bcb2275 SHA256 ae21ffc8160241001ecbc7af0751ff65cfc5ceffae8a1b9cf6822328f4c0474e
 EBUILD libarchive-2.6.0.ebuild 2084 RMD160 9fb1e3a71dd5b79a67dc89136d43bea42c2e4cd6 SHA1 411f358b3086a90a145ce7dc5d78da346d3e8d77 SHA256 410ad196a765b4fceb2515ec4e28a85a2a6394c5d4eaf73a0c589edd906841cb
 EBUILD libarchive-2.6.1.ebuild 2094 RMD160 f1ea1ec26c8ce1064780e3db6691df6c89711fa0 SHA1 3d16cedb63e6075335c0742914a060b14637be5d SHA256 0c2a32c7b93f26643be45b2719efb70a69e8606ec050a9919080805abfb75309
-EBUILD libarchive-2.6.2.ebuild 2006 RMD160 1f879b316314a50b08ad85c6ad412239fe6a4e42 SHA1 ef26cd8e77c9483e9bdf547f908433dc26712b13 SHA256 ce397970baf9dcb8f13f1c139271e9aaf4a283db545f08ab9a8d4ee0451ce9e5
-EBUILD libarchive-2.7.0.ebuild 2159 RMD160 fa6229f3540d9cb69d27ea1d6ad14eb8e55dc7c4 SHA1 537a67ab3dfafc9062f91b83e96b12df29ea3ed7 SHA256 a2094faf435dd0a02e54c5eebadae9e88c5d4d8d87501a79fa62d4885adfdcea
-MISC ChangeLog 20897 RMD160 a0dbece9d91a3ec58f76f20e34b5ff7ba88df4c8 SHA1 f647a0e3039a28213653458e515808c84dc08835 SHA256 8ef16615f627df334d41afa3c0a358acbb46e59609320242ba9faad2834d6f10
+EBUILD libarchive-2.6.2.ebuild 2005 RMD160 84c7967ee32dde5758a54e70ea5da0b34cd756b9 SHA1 161639cde849bb3a8de336173fe190dc0bb2711f SHA256 0c6854b20b1b9ebdcf3a6ea2d873cbd34ce2fed94862bb8fdd8dff405e7f50a4
+EBUILD libarchive-2.7.0.ebuild 2317 RMD160 8bd5a610d238287d52ca0731977a4c814d4c2fa4 SHA1 16b4edcbfaf220860efcbd72a37bf8492b2605ef SHA256 393ebd6a1a7c3941e64ebd47b642f100ae69f127b887a3c29f8185c6309150b7
+MISC ChangeLog 21249 RMD160 f022be53d3585330df762cde91a628bb428c1aa8 SHA1 8c777e9de89b435dd9428942aabd26296d9e0d62 SHA256 063123a5d6af96fcc2f29b590e7d4bccab7926d666fee8911179dcdad90262c3
 MISC metadata.xml 872 RMD160 895e9e13d46da8427f2695bc24aaefb16a5d8195 SHA1 e64e4be1a494de7e45305a7085b82b4b551c9c6f SHA256 c736f7829f1a1571706230bd5ec245389317faa2888300a1b74f440307f2c6e9
